Fix header spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -169,8 +169,6 @@ main {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    transform: translateX(12px);
-
 }
 
 .current-temp {
